<resources>
    <string name="app_name">Wheep</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button_waiting">SIGN IN</string>
    <string name="login_button_signing">SIGNING</string>
    <string name="login_empty">Enter login</string>
    <string name="password_empty">Enter password</string>
    <string name="user_avatar_transition_key">userAvatar</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="avatar_image_description">avatar</string>
    <string name="log_out_sign">Log out</string>
    <string name="hubs_tab">HUBS</string>
    <string name="contacts_tab">CONTACTS</string>
    <string name="add_contact">＋ ADD CONTACT</string>
    <string name="add_hub">＋ ADD HUB</string>
    <string name="add_item">＋ ADD ITEM</string>
    <string name="add_users">＋ ADD USERS</string>
    <string name="alias">Alias</string>
    <string name="search_button">SEARCH</string>
    <string name="type_here">Type your message</string>
    <string name="add_to_contacts">ADD CONTACT</string>
    <string name="remove_from_contacts">REMOVE CONTACT</string>
    <string name="no_user">No user selected</string>
    <string name="network_error">Network error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="create">CREATE</string>
    <string name="send_sign">-></string>
    <string name="hub_name">Hub name</string>
    <string name="users_selected">Selected users: %d</string>
    <string name="select_more_users">Select more than one user</string>
    <string name="avatar_is_loading">Avatar is loading</string>
    <string name="name_empty">Enter hub name</string>
    <string name="user_count">Hub members: %d</string>
    <string name="remove_user">Remove %s from this hub?</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="apply">APPLY</string>
    <string name="add">ADD</string>
    <string name="select_users">Select users</string>
    <string name="channel_name">Wheep</string>
    <string name="channel_description">Wheep</string>
</resources>
